--- a/pom.xml
+++ b/pom.xml
@@ -41,7 +41,10 @@
     		<groupId>org.springframework.ldap</groupId>
     		<artifactId>spring-ldap-core</artifactId>
 		</dependency>
-
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-devtools</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>com.mysql</groupId>
 			<artifactId>mysql-connector-j</artifactId>
